cmake_minimum_required(VERSION 3.0)

project(bpa)

# library
find_package(glm CONFIG REQUIRED)
file(GLOB source_files src/*)
add_library(${PROJECT_NAME} ${source_files} README.md)
source_group("" FILES ${source_files})
source_group(TREE ${CMAKE_CURRENT_LIST_DIR} FILES ${source_files})
target_link_libraries(${PROJECT_NAME} PRIVATE glm::glm)
target_compile_features(${PROJECT_NAME} PUBLIC cxx_std_20)
if(MSVC)
	target_compile_options(${PROJECT_NAME} PRIVATE /W4)
else()
	target_compile_options(${PROJECT_NAME} PRIVATE -Wall -Wextra)
endif()

# tests
include(CTest)
if (BUILD_TESTING)
	find_package(Catch2 3.0.1 REQUIRED)
	file(GLOB test_files test/*)
	add_executable(tests ${test_files})
	source_group("" FILES ${test_files})
	source_group(TREE ${CMAKE_CURRENT_LIST_DIR} FILES ${test_files})
	target_link_libraries(tests PRIVATE ${PROJECT_NAME} Catch2::Catch2WithMain)
	include(Catch)
	catch_discover_tests(tests)
endif()
